# Python

./: .drone.yml  .gitignore  .gitpod.yml  .travis.yml  Pipfile  README.md  add_2.py  armstrong.py  average.py  base_exponent_power.py  build.py  build.sh  build_all.sh  calc.py  ccalc.py  check.sh  corona_updates.py  corona_updates_india.py  division_2.py  even_odd.py  factorial.py  factors_of_number.py  file_renamer.py  gapful.py  greater_2.py  greater_3.py  guess_it.py  hangman.py  hello.py  list_op.py  make_executable.sh  multiplication_2.py  number_conversion.py  number_swap.py  palindrome.py  password_generator.py  prime.py  pyproject.toml  requirements.txt  reverse.py  (+5 more)
.circleci/: config.yml
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  executable.yml  python.yaml  pythonpackage.yaml
Practice/: 1.py  2.py  README.md
github/: info.py  stars.py
other/: README.md  get-as-info.py  get_as_info.py  get_latest_speedtest.py
others/: README.md  get_as_info.py  get_as_prefixes.py  get_latest_speedtest.py  get_sourceforge_mirrors.py  scan_network.py
practice/: 1.py  3.py  4.py  5.py  6.py  README.md
sourceforge/: README.md  get_direct_links.py  get_mirrors.py
tests/: test_add_2.py  test_armstrong.py  test_average.py  test_base_exponent_power.py
