[project]
name = "python"
version = "1.0.0"
description = "Collection of my Python Programs"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "bs4==0.0.2",
    "csvtomd==0.3.0",
    "requests==2.32.3",
    "pytest==8.4.0",
    "flake8==7.2.0",
    "beautifulsoup4==4.13.4"
]

[dependency-groups]
dev = [
    "pytest==8.4.0",
    "pytest-html==4.1.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
