[project]
name = "python"
version = "1.0.0"
description = "Collection of my Python Programs"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "bs4==0.0.2",
    "csvtomd==0.3.0",
    "requests==2.32.5",
    "pytest==9.0.1",
    "flake8==7.3.0",
    "beautifulsoup4==4.14.3"
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "pytest-html==4.1.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
